Minor changes to increase UX

--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,12 @@ body {
   padding: 0;
 }
 
+footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 #root {
   display: flex;
   place-items: center;
